--- a/tpl/blocks/header.html
+++ b/tpl/blocks/header.html
@@ -190,7 +190,7 @@
             <a ui-fullscreen></a>
         </li>
         <!-- 消息通知 -->
-        <li class="dropdown" dropdown>
+        <!-- <li class="dropdown" dropdown>
             <a href class="dropdown-toggle" dropdown-toggle>
                 <i class="icon-bell fa-fw"></i>
                 <span class="visible-xs-inline">Notifications</span>
@@ -212,14 +212,9 @@
                             </span>
                         </a>
                     </div>
-                    <!-- <div class="panel-footer text-sm">
-                  <a href class="pull-right"><i class="fa fa-cog"></i></a>
-                  <a href="#notes" data-toggle="class:show animated fadeInRight">See all the notifications</a>
-                </div> -->
                 </div>
             </div>
-            <!-- / dropdown -->
-        </li>
+        </li> -->
         <!-- 个人中心 -->
         <li class="dropdown" dropdown>
             <a href class="dropdown-toggle clear" dropdown-toggle>
