--- a/src/pages/alarm/alarm.html
+++ b/src/pages/alarm/alarm.html
@@ -90,6 +90,10 @@
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
                                     <span ng-bind="pages.count"></span>条告警</em>
+                                    <!-- <div style="display: inline-block;margin:0 5px" class="pull-right">
+                                        <input type="text" style="width: 50px;height: 30px;">
+                                        <button class="btn btn-primary" style="padding: 5px 10px">跳页</button>
+                                    </div> -->
                                 <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-if="pages.pageNow>1">上一页</a>
@@ -125,6 +129,8 @@
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow+1)" ng-if="pages.pageNow<pages.maxPage">下一页</a>
                                     </li>
                                 </ul>
+                               
+                               
                             </div>
                         </div>
                     </div>
