--- a/src/pages/safety_dns/safety_dns.html
+++ b/src/pages/safety_dns/safety_dns.html
@@ -24,21 +24,21 @@
                                 <label>域名</label>
                                 <input type="text" class="form-control input_radius" ng-model="dns.domain_ip" ng-keyup="myKeyup($event)">
                             </div>
-                            <div class="form-group col-md-2">
+                            <!-- <div class="form-group col-md-2">
                                 <label>解析IP</label>
                                 <input type="text" class="form-control input_radius" ng-model="dns.resolves_ip" ng-keyup="myKeyup($event)">
-                            </div>
+                            </div> -->
                             <div class="form-group col-md-2">
                                 <label>TTL</label>
                                 <input type="text" class="form-control input_radius" ng-model="dns.ttl" ng-keyup="myKeyup($event)">
                             </div>
                         </div>
                         <div class="row margin download_relative">
-                            <div class="form-group col-md-2" style="max-width: 150px;">
+                            <!-- <div class="form-group col-md-2" style="max-width: 150px;">
                                 <label>解析结果</label>
                                 <select class="form-control input_radius" style="background-color: #fff;" ng-model="dns.resolves_res"
                                     ng-options="x.num as x.type for x in resolve_result"></select>
-                            </div>
+                            </div> -->
                             <div class="form-group col-md-4" style="max-width: 300px;">
                                 <label>时间</label>
                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
