--- a/src/pages/safety_size/safety_size.html
+++ b/src/pages/safety_size/safety_size.html
@@ -17,11 +17,11 @@
                                 <input type="text" class="form-control timerange input_radius" readonly style="background-color: #fff;">
                             </div>
                             <div class="form-group col-md-2">
-                                <label>流量超过</label>
+                                <label>流量超过(B)</label>
                                 <input type="text" class="form-control input_radius" ng-model="size.flow_size" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
-                                <label>链接时长超过</label>
+                                <label>链接时长超过(s)</label>
                                 <input type="text" class="form-control input_radius" ng-model="size.flow_duration" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
@@ -54,7 +54,7 @@
                                     <td class="td_content" ng-bind="item.timestamp"></td>
                                     <td class="td_content" ng-bind="item.host_ip"></td>
                                     <td class="td_content" ng-bind="item.flow_bytes"></td>
-                                    <td class="td_content" ng-bind="item.flow_duration"></td>
+                                    <td class="td_content" ng-bind="item.flow_duration + ' s'"></td>
                                     <td class="td_content" ng-bind="item.application"></td>
                                 </tr>
                             </table>
