增加权限限制

--- a/tpl/blocks/nav.html
+++ b/tpl/blocks/nav.html
@@ -116,7 +116,7 @@
 
 
     <!-- 设置 -->
-    <li>
+    <li ng-if="role_admin == 'admin'">
         <a href class="auto">
             <span class="pull-right text-muted">
                 <i class="fa fa-fw fa-angle-right text"></i>
